# lmms

./: CMakeLists.txt  ChangeLog  TODO
cmake/modules/: BuildPlugin.cmake  InstallHelpers.cmake
data/: CMakeLists.txt
data/backgrounds/: CMakeLists.txt
data/locale/: CMakeLists.txt
data/presets/: CMakeLists.txt
data/projects/: CMakeLists.txt
data/samples/: CMakeLists.txt
data/themes/: CMakeLists.txt
include/: AudioAlsa.h  AudioBackend.h  AudioJack.h  AudioOss.h  AudioOutputContext.h  AudioPortAudio.h  AudioPulseAudio.h  AudioSdl.h  AutomatableModel.h  AutomationPattern.h  BbTrack.h  ConfigurationBackend.h  ConfigurationNativeBackend.h  ConfigurationObject.h  ConfigurationProperty.h  ConfigurationXmlBackend.h  ControllerRackView.h  Global.h  ImportFilter.h  Instrument.h  InstrumentPlayHandle.h  InstrumentTrack.h  JournallingObject.h  MainWindow.h  MetricMap.h  MetricSegment.h  MidiAlsaRaw.h  MidiAlsaSeq.h  MidiOss.h  MidiPort.h  MidiTime.h  MidiWinMM.h  Mixer.h  PathConfig.h  Pattern.h  PreferencesDialog.h  ResourceAction.h  ResourceBrowser.h  ResourcePreviewer.h  RuntimeConfig.h  (+29 more)
include/gui/: SongEditor.h  SongEditorWindow.h
plugins/: CMakeLists.txt
plugins/audio_file_processor/: audio_file_processor.cpp
plugins/bass_booster/: bass_booster.cpp
plugins/bit_invader/: bit_invader.cpp
plugins/flp_import/: FlpImport.cpp  FlpImport.h
plugins/ladspa_effect/: CMakeLists.txt  LadspaEffect.cpp  ladspa_effect.cpp
plugins/midi_import/: MidiImport.cpp  MidiImport.h
plugins/patman/: patman.cpp
plugins/peak_controller_effect/: peak_controller_effect.cpp
plugins/sf2_player/: CMakeLists.txt  sf2_player.cpp
plugins/stk/mallets/: CMakeLists.txt  mallets.cpp
plugins/triple_oscillator/: TripleOscillator.cpp
plugins/vestige/: CMakeLists.txt  (+1 more)
(+129 files in other folders)
