CPACK_ADD_COMPONENT_GROUP(Data DISPLAY_NAME "Data files" DESCRIPTION "Additional resources to be used in LMMS")

ADD_SUBDIRECTORY(backgrounds)
ADD_SUBDIRECTORY(locale)
ADD_SUBDIRECTORY(presets)
ADD_SUBDIRECTORY(projects)
ADD_SUBDIRECTORY(samples)
ADD_SUBDIRECTORY(themes)

IF(LMMS_BUILD_LINUX)
INSTALL(FILES themes/default/icon.png DESTINATION ${DATA_DIR}/pixmaps RENAME lmms.png COMPONENT Core)
INSTALL(FILES lmms DESTINATION ${DATA_DIR}/menu COMPONENT Core)
INSTALL(FILES lmms.desktop DESTINATION ${DATA_DIR}/applications COMPONENT Core)
INSTALL(FILES lmms.xml DESTINATION ${DATA_DIR}/mime/packages COMPONENT Core)
ENDIF(LMMS_BUILD_LINUX)

