CPACK_ADD_COMPONENT(Locales DISPLAY_NAME "Localization files" DESCRIPTION "Support for languages other than English" GROUP "Data")
FILE(GLOB QM_FILES *.qm)
IF(LMMS_BUILD_WIN32)
	FILE(GLOB QT_QM_FILES ${QT_TRANSLATIONS_DIR}/qt_[^h]*.qm)
ENDIF(LMMS_BUILD_WIN32)
INSTALL(FILES ${QM_FILES} ${QT_QM_FILES} DESTINATION ${LMMS_DATA_DIR}/locale COMPONENT Locales)

