CPACK_ADD_COMPONENT(STK DISPLAY_NAME "Mallets (STK)" DESCRIPTION "STK-based Mallets plugin" GROUP "Plugins")

INCLUDE(BuildPlugin)
INCLUDE_DIRECTORIES(${STK_INCLUDE_DIR})
LINK_LIBRARIES(${STK_LIBRARY})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions")
BUILD_PLUGIN(malletsstk mallets.cpp mallets.h MOCFILES mallets.h EMBEDDED_RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.png COMPONENT STK)

IF(LMMS_BUILD_WIN32)
FILE(GLOB RAWWAVES ${CMAKE_INSTALL_PREFIX}/share/stk/rawwaves/*.raw COMPONENT STK)
INSTALL(FILES ${RAWWAVES} DESTINATION ${DATA_DIR}/stk/rawwaves COMPONENT STK)
ENDIF(LMMS_BUILD_WIN32)


